--- a/views/doctor/docsignup.ejs
+++ b/views/doctor/docsignup.ejs
@@ -11,8 +11,7 @@
   <div class="w3-half w3-light-grey w3-center" style="min-height:700px" id="work">
     <div class="w3-padding-32">
       <h2>Doctor</h2>
-       <p>Health is Wealth</p>
-     
+      <p>Your health is our top priority.</p>
     </div>
     <div class="w3-row">
       <div class="w3-half">
