--- a/views/dochome.ejs
+++ b/views/dochome.ejs
@@ -111,7 +111,7 @@ form.example::after {
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo  w3-animate-top"><span class="w3-hide-small"></span> Health Plus </h1>
-    <p>Health Is Wealth.</p>
+    <p>Happiness begins with good health.</p>
   </header>
      <div class="w3-row">
   <div class="w3-col l12 m12 s12 w3-red w3-center"><p>
