--- a/views/home.ejs
+++ b/views/home.ejs
@@ -184,7 +184,7 @@ var Alert = new CustomAlert();
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo  w3-animate-top"><span class="w3-hide-small"></span> Health Plus </h1>
-    <p>Health Is Wealth.</p>
+    <p>Happiness begins with good health.</p>
   </header>
 
    <div class="w3-row">
