--- a/views/patientSignup.ejs
+++ b/views/patientSignup.ejs
@@ -11,7 +11,7 @@
   <div class="w3-half w3-light-grey w3-center" style="min-height:700px" id="work">
     <div class="w3-padding-32">
       <h2>Patient</h2>
-       <p>Health is Wealth</p>
+       <p>Beautiful body. Beautiful mind.</p>
      
     </div>
     <div class="w3-row">
