--- a/views/patientprof.ejs
+++ b/views/patientprof.ejs
@@ -355,7 +355,7 @@ div.scrollmenu div.il {
   <!-- Header/Home -->
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo  w3-animate-top"><span class="w3-hide-small"></span> Patient's Profile </h1>
-    <p>Health Is Wealth.</p>
+    <p>Happiness begins with good health.</p>
   </header>
 
    <div class="w3-content w3-center w3-text-black w3-margin-large" id="about">
